functional api, sort and filter parameters adjusted
