# docs/openapi.yaml
@@ -14,12 +14,40 @@ externalDocs:
   description: Source code
   url: https://github.com/pedro-as/compass-sprint3/
 servers:
-  - url: localhost:8080
+  - url: http://localhost:8080
+    description: API local
+  - url: https://61b3d05baf5ff70017ca2098.mockapi.io
     description: API de testes
 paths:
-  /estados:
+  /api/states:
     get:
       summary: Lista todos os Estados
+      parameters:
+          - name: regiao
+            in: query
+            description: Filtrar por nome da região.
+            required: false
+            schema:
+              type: string
+              enum:
+              - Centro-Oeste
+              - Nordeste
+              - Norte
+              - Sudeste
+              - Sul
+            style: form
+            explode: true
+          - name: sort
+            in: query
+            description: Ordenar de forma decrescente por população ou por área.
+            required: false
+            schema:
+              type: string
+              enum:
+              - populacao,desc
+              - area,desc
+            style: form
+            explode: true
       responses:
         '200':
           description: Sucesso
@@ -27,13 +55,15 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Estados"
+      tags:
+      - Operações básicas
     post:
       summary: Cadastra um novo Estado
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Estado"
+              $ref: "#/components/schemas/Estado_no-id"
       responses:
         '201':
           description: Estado cadastrado
@@ -41,15 +71,18 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Estado"
-  /estados/{id}:
+      tags:
+      - Operações básicas
+  /api/states/{id}:
     parameters:
       - name: id
         in: path
         schema:
           type: integer
         required: true
+        
     get:
-      summary: Recupera um Estado com base no ID
+      summary: Recupera um Estado por ID
       responses:
         '200':
           description: Sucesso
@@ -62,13 +95,15 @@ paths:
           content:
             application/json:
               example: Not Found
+      tags:
+      - Operações básicas
     put:
-      summary: Atualiza um Estado com base no ID
+      summary: Atualiza um Estado por ID
       requestBody:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Estado"
+              $ref: "#/components/schemas/Estado_no-id"
       responses:
         '200':
           description: Estado atualizado
@@ -81,8 +116,10 @@ paths:
           content:
             application/json:
               example: Not Found
+      tags:
+      - Operações básicas
     delete:
-      summary: Remove um Estado com base no ID
+      summary: Remove um Estado por ID
       responses:
         '200':
           description: Estado removido
@@ -95,6 +132,8 @@ paths:
           content:
             application/json:
               example: Not Found
+      tags:
+      - Operações básicas
 components:
   schemas:
     Estado:
@@ -104,25 +143,67 @@ components:
           type: integer
         nome:
           type: string
+          minLength: 4
         regiao:
           type: string
+          enum:
+          - Centro-Oeste
+          - Nordeste
+          - Norte
+          - Sudeste
+          - Sul
         populacao:
           type: integer
           format: int64
+          minimum: 0
         capital:
           type: string
         area:
           type: number
           format: double
+          minimum: 0
       required:
       - nome
       - regiao
       example:
         id: 13
-        nome: "Minas Gerais"
-        regiao: "Sudeste"
+        nome: Minas Gerais
+        regiao: Sudeste
         populacao: 21411923
-        capital: "Belo Horizonte"
+        capital: Belo Horizonte
+        area: 586513.993
+    Estado_no-id:
+      type: object
+      properties:
+        nome:
+          type: string
+          minLength: 4
+        regiao:
+          type: string
+          enum:
+          - Centro-Oeste
+          - Nordeste
+          - Norte
+          - Sudeste
+          - Sul
+        populacao:
+          type: integer
+          format: int64
+          minimum: 0
+        capital:
+          type: string
+        area:
+          type: number
+          format: double
+          minimum: 0
+      required:
+      - nome
+      - regiao
+      example:
+        nome: Minas Gerais
+        regiao: Sudeste
+        populacao: 21411923
+        capital: Belo Horizonte
         area: 586513.993
     Estados:
       type: array
